feat(gamification): change user number of points endpoint
