# src/modules/gamification/dto/points.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsInt, IsNotEmpty } from 'class-validator';
+
+export class PointsDto {
+  @ApiProperty({
+    description: 'The points to be added to the user',
+    required: true,
+    example: 20,
+  })
+  @IsInt()
+  @IsNotEmpty()
+  points: number;
+}
